--- a/ui/css/app.css
+++ b/ui/css/app.css
@@ -1,15 +1,10 @@
-#line-numbers {
+#editor {
   counter-reset: line;
-  user-select: none;
-  border-right: 1px solid #ccc;
 }
 
-.line {
-  counter-increment: line;
-}
-
-.line::before {
+#editor div::before {
   content: counter(line);
+  counter-increment: line;
   padding-right: 10px;
   text-align: right;
   display: inline-block;
