--- a/ui/css/app.css
+++ b/ui/css/app.css
@@ -7,6 +7,7 @@
   counter-increment: line;
   padding-right: 10px;
   text-align: right;
+  display: inline-block;
   width: 30px;
   color: #999;
 }
